--- a/bucketsort/CMakeLists.txt
+++ b/bucketsort/CMakeLists.txt
@@ -1,6 +1,8 @@
 cmake_minimum_required(VERSION 3.14.4)
 project(bucketsort)
 
+find_package(OpenMP REQUIRED)
+
 # c++11
 set (CMAKE_CXX_STANDARD 11)
 
@@ -12,3 +14,5 @@ file(GLOB SOURCES "src/*.cpp")
 
 # executable
 add_executable(main ${SOURCES})
+
+target_link_libraries(main PUBLIC OpenMP::OpenMP_CXX)
